# adcortex-python

./: .gitignore  .readthedocs.yaml  pyproject.toml  requirements.txt  your_chatbot_script.py  your_script.py
.github/workflows/: python-publish.yml
docs/: requirements.txt
docs/source/: api_reference.rst  conf.py  index.rst  installation.rst  types.rst  usage.rst
docs/source/_static/: custom.css  custom.js
examples/: async_chat_client_example.py  sample_chatbot_script.py  sample_script.py  sync_chat_client_example.py
src/adcortex/: __init__.py  async_chat_client.py  chat_client.py  chat_clientv2.py  client.py  types.py
