[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adcortex"
version = "0.1.0"
description = "A Python SDK for Adcortex"
authors = [
    { name = "3102Labs", email = "3102labs@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
requests = "^2.31.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.1",
    "mypy>=1.11.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["adcortex*"]
